--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://ronaldkohhh:ronaldkohhh@cluster0.n6xsqzr.mongodb.net/test"
-NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
-NEXTAUTH_SECRET="NEXT-SECRET"
+DATABASE_URL=
+NEXTAUTH_JWT_SECRET=
+NEXTAUTH_SECRET=
 
-GITHUB_ID=1f7f599fb849bde35422
-GITHUB_SECRET=72063325fb2385fb6a6adae84b21660684d26d58
+GITHUB_ID=
+GITHUB_SECRET=
 
-GOOGLE_CLIENT_ID=300043071886-1m5pf700vvace747avdqs8e6m3b1egc6.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
